Finalized connection to local running sql-server (docker). Added initial and seeding migrations. Created and inserted into Dependency Injection new formal Repositories

--- a/PieShop/appsettings.json
+++ b/PieShop/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection":  "Server=localhost,1433; Database=PieShopDB; User Id=SA; Password=NewDerry2168!;"
+    "DefaultConnection":  "Server=localhost,1433; Database=PieShopDB; User Id=SA; Password=*****;"
   }
 }
