Partialized several parts of View-code into partial views. Added navigation links via Razor add tags syntax. Created Homepage view.

--- a/PieShop/PieShop.csproj
+++ b/PieShop/PieShop.csproj
@@ -12,6 +12,7 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Views\Shared\" />
     <Folder Include="wwwroot\content\" />
+    <Folder Include="Views\Home\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.editorconfig" />
