--- a/PieShop/appsettings.json
+++ b/PieShop/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection":  "Server=localhost,1433; Database=PieShopDB; User Id=SA; Password=*****;"
+    "DefaultConnection":  "Server=localhost,1433; Database=PieShopDB; User Id=SA; Password=******;"
   }
 }
